# projet_final

./: .gitignore  pyproject.toml  requirements.txt
data/: data.csv
src/: main.py
src/ferdi/: __init__.py
src/ferdi/utils/: collect_errors.py  parse_csv.py
