[project]
name = "ferdi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ferdinand Monnan", email = "ferdi3823@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[project.scripts]
ferdi = "ferdi:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
